2007-09-17  Xavier Thomas <xavier.thomas.1980 chez gmail dot com> 

	Code cleanup

2007-09-17  Xavier Thomas <xavier.thomas.1980 chez gmail dot com> 

	ChangeLog added
